Fixing UI bug : cardwall header cells line color were not well displayed on small screen resolution UI: fixing cardwall cards color

--- a/plugins/agiledashboard/www/themes/default/css/style.css
+++ b/plugins/agiledashboard/www/themes/default/css/style.css
@@ -55,6 +55,10 @@
     color: #999;
     margin-top: 0;
 }
+.agiledashboard .cardwall-column-header:first-child {
+    vertical-align: middle;
+}
+
 .agiledashboard .cards {
   list-style: none;
   margin: 0;
@@ -77,7 +81,7 @@
 .planning-item.planning-draggable > .card,
 .planning-item.planning-draggable > .card > .card-container {
     font-style: normal;
-    background-color: #FFF7C2;
+    background-color: #FFFF94;
 }
 
 .milestone-content > ul.cards,
