--- a/plugins/cardwall/www/themes/default/css/style.css
+++ b/plugins/cardwall/www/themes/default/css/style.css
@@ -49,7 +49,7 @@
     -webkit-border-radius:  5px;
         -moz-border-radius: 5px;
             border-radius:  5px;
-    background: #FFF7C2;
+    background: #FFFF94;
     border: 1px solid #CACACA;
     -moz-box-shadow:    0px 1px 0px 0px rgba(217,217,217,0.50);
     -webkit-box-shadow: 0px 1px 0px 0px rgba(217,217,217,0.50);
@@ -256,6 +256,7 @@
 
 .cardwall-column-header {
     text-transform: uppercase;
+    vertical-align: top;
 }
 
 .cardwall-column-header, .cardwall-cell-header {
