--- a/plugins/tracker/www/themes/default/css/style.css
+++ b/plugins/tracker/www/themes/default/css/style.css
@@ -1225,7 +1225,7 @@ td.first-column {
     position:relative;
 }
 .card-container {
-    background: #FFF7C2;
+    background: #FFFF94;
     padding: 0.25em;
     padding-left: 0.5em;
     padding-right: 0.5em;
